@@ -1,24 +1,0 @@
-Package: linux-image-k7
-Architecture: i386
-Section: admin
-Priority: extra
-Depends: linux-image-686
-Description: Linux image on AMD K7 - transition package
- This package is for transition only.
-
-Package: linux-image-2.6-k7
-Architecture: i386
-Section: admin
-Priority: extra
-Depends: linux-image-2.6-686
-Description: Linux 2.6 image on AMD K7 - transition package
- This package is for transition only.
-
-Package: linux-headers-2.6-k7
-Architecture: i386
-Section: devel
-Priority: extra
-Depends: linux-headers-2.6-686
-Description: Header files for Linux 2.6 on AMD K7 - transition package
- This package is for transition only.
-
