@@ -2,6 +2,7 @@ linux-latest-2.6 (18) UNRELEASED; urgency=low
 
   * Update to 2.6.29-1.
   * Use dh_prep.
+  * Remove lenny transition packages.
 
  -- Bastian Blank <waldi@debian.org>  Tue, 31 Mar 2009 22:00:50 +0200
 
